# live_scores_api

./: Cargo.toml  Football(Professional).textproto  Hockey.textproto  build.rs
fetch_sports/: Cargo.toml
fetch_sports/payloads/: all_sports.json
fetch_sports/src/: main.rs
src/: color.rs  lib.rs  main.rs  server.rs  team.rs  team_writer.rs
src/common/: color.rs  data.rs  fetch.rs  mod.rs  processors.rs  proto_helpers.rs  team.rs  types.proto
src/common/teams/: BaseballTeams.textproto  BasketballTeams.textproto  CollegiateTeams.textproto  FootballTeams.textproto  HockeyTeams.textproto  baseball.json  basketball.json  collegiate.json  football.json  hockey.json
src/sport/: baseball.rs  basketball.rs  football.rs  golf.rs  hockey.rs  mod.rs
