[package]
name = "fetch_sports"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

live_sports = { path = "../" }
axum = "0.6.4"
serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"] }
parking_lot = "0.12.1"
itertools = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.21"
lazy_static = "1.4.0"


